--- a/criar-conta.html
+++ b/criar-conta.html
@@ -38,7 +38,7 @@
                 <div class="col col-md-8">
                    <nav class="main-nav desktop">
                        <span class="caption subtle-w">Já possui uma conta?</span>
-                       <a href="entrar" class="header-cta btn lg dark-btn">Entrar</a>
+                       <a href="entrar.html" class="header-cta btn lg dark-btn">Entrar</a>
                    </nav>
                    <nav class="main-nav mob">
                     <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
@@ -71,7 +71,7 @@
                             <h2 class="heading">Standard</h2>
                             <span class="caption lg dark">R$ 1.500 / Mês</span>
                         </div>
-                        <a href="#" class="link md neutral-link">Mudar Plano</a>     
+                        <a href="standard.html" class="link md neutral-link">Mudar Plano</a>     
                     </div>
 
                     <!-- Form -->
@@ -172,9 +172,9 @@
     </section>
 
 
-      <!-- Footer -->
+     <!-- Footer -->
 
-      <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -186,9 +186,9 @@
             <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
-                      <a href="standard" class="link subtle-l">Comece Agora</a>
-                      <a href="entrar" class="link subtle-l">Entrar</a>
-                      <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
+                      <a href="standard.html" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar.html" class="link subtle-l">Entrar</a>
+                      <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                       <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                   </nav>
@@ -200,7 +200,6 @@
                       <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
                       <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
                       <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                      <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
                   </nav>
               </div>
           </div>
@@ -219,7 +218,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col col-md-4">
-                          <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
                       </div>
                       <div class="col col-md-8">
                          <nav class="main-nav mob">
@@ -231,16 +230,15 @@
                       <div class="col">
                           <nav class="mob-nav">
                               <a href="/" class="link white">Home</a>
-                              <a href="como-monetizar" class="link white">Como monetizar</a>
-                              <a href="standard" class="link white">Planos</a>
-                              <a href="entrar" class="link white">Entrar</a>
-                              <a href="standard" class="link primary-link">Começar Agora</a>
+                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                              <a href="standard.html" class="link white">Planos</a>
+                              <a href="entrar.html" class="link white">Entrar</a>
+                              <a href="standard.html" class="link primary-link">Começar Agora</a>
                           </nav>
                           <nav class="mob-social-nav">
                               <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
                               <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
                               <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                              <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
                           </nav>
                       </div>
                   </div>
@@ -250,6 +248,7 @@
           </div>
           </div>
       </div>
+
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
