--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -12,18 +12,18 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" href="favicon.png" />
     <!-- Open Graph -->
-    <meta property="og:url" content="https://qgx.digital/politicas-de-privacidade"/>
+    <meta property="og:url" content="https://qgx.digital/politica-de-privacidade"/>
     <meta itemprop="image" property="og:image" content="https://qgx.digital/tile.png"/>
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:title" content="QGX Pagamentos | Políticas de Privacidade"/>
+    <meta property="og:title" content="QGX Pagamentos | Política de Privacidade"/>
     <meta property="og:description" content="Nossa plataforma permite que você opere como um banco digital e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência."/>
     <meta property="og:site_name" content="QGX"/>
     <meta property="og:type" content="website"/>
 
     <meta name="HandheldFriendly" content="true">
     <meta name="author" content="Vitor Pinho"/>
-    <title>QGX Pagamentos | Políticas de Privacidade</title>
+    <title>QGX Pagamentos | Política de Privacidade</title>
 </head>
 <body>
     
@@ -37,10 +37,10 @@
             </div>
             <div class="col col-md-8">
                <nav class="main-nav desktop">
-                   <a href="como-monetizar" class="link white">Como monetizar</a>
-                   <a href="standard" class="link white">Planos</a>
-                   <a href="entrar" class="link white">Entrar</a>
-                   <a href="standard" class="header-cta btn lg dark-btn">Comece Agora</a>
+                   <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                   <a href="standard.html" class="link white">Planos</a>
+                   <a href="entrar.html" class="link white">Entrar</a>
+                   <a href="standard.html" class="header-cta btn lg dark-btn">Comece Agora</a>
                </nav>
                <nav class="main-nav mob">
                 <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row align-items-center spread">
                 <div class="col">
-                    <h1 class="heading lg white spread">POLÍTICAS DE PRIVACIDADE</h1>
+                    <h1 class="heading lg white spread">POLÍTICA DE PRIVACIDADE</h1>
 
 <p>Esta Política de  Privacidade (&ldquo;<u>Política</u>&rdquo;) se aplica a todos os serviços prestados pela <strong>QGX PAGAMENTOS LTDA.</strong>, com sede na Av. Presidente Juscelino Kubitschek, nº 2041, sala 1002,  Vila Nova Conceição, São Paulo/SP, inscrita no CNPJ/MF sob o nº  35.813.685/0001-70 (&ldquo;<u>Instituição de  Pagamento</u>&rdquo;), em razão da utilização pelo USUÁRIO dos serviços prestados pela INSTITUIÇÃO  DE PAGAMENTO.</p>
 <p><strong>A presente Política tem  o objetivo de informar, de forma clara e completa, sobre como haverá o  Tratamento das Informações Pessoais do USUÁRIO, em decorrência da utilização dos  serviços prestados pela INSTITUIÇÃO  DE PAGAMENTO</strong>.</p>
@@ -154,9 +154,9 @@
     </section>
 
 
-     <!-- Footer -->
+    <!-- Footer -->
 
-     <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -168,9 +168,9 @@
             <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
-                      <a href="standard" class="link subtle-l">Comece Agora</a>
-                      <a href="entrar" class="link subtle-l">Entrar</a>
-                      <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
+                      <a href="standard.html" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar.html" class="link subtle-l">Entrar</a>
+                      <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                       <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                   </nav>
@@ -182,7 +182,6 @@
                       <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
                       <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
                       <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                      <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
                   </nav>
               </div>
           </div>
@@ -201,7 +200,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col col-md-4">
-                          <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
                       </div>
                       <div class="col col-md-8">
                          <nav class="main-nav mob">
@@ -213,16 +212,15 @@
                       <div class="col">
                           <nav class="mob-nav">
                               <a href="/" class="link white">Home</a>
-                              <a href="como-monetizar" class="link white">Como monetizar</a>
-                              <a href="standard" class="link white">Planos</a>
-                              <a href="entrar" class="link white">Entrar</a>
-                              <a href="standard" class="link primary-link">Começar Agora</a>
+                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                              <a href="standard.html" class="link white">Planos</a>
+                              <a href="entrar.html" class="link white">Entrar</a>
+                              <a href="standard.html" class="link primary-link">Começar Agora</a>
                           </nav>
                           <nav class="mob-social-nav">
                               <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
                               <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
                               <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                              <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
                           </nav>
                       </div>
                   </div>
