--- a/standard.html
+++ b/standard.html
@@ -29,27 +29,27 @@
 
      <!-- Header Comp -->
 
-    <header class="main-header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col col-md-4">
-                    <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
-                </div>
-                <div class="col col-md-8">
-                   <nav class="main-nav desktop">
-                       <a href="como-monetizar" class="link white">Como monetizar</a>
-                       <a href="standard" class="link white">Planos</a>
-                       <a href="entrar" class="link white">Entrar</a>
-                   </nav>
-                   <nav class="main-nav mob">
-                    <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
-                        <i class="icon icon-menu"></i>
-                    </a>
-                   </nav>
-                </div>
+   <header class="main-header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col col-md-4">
+                <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
+            </div>
+            <div class="col col-md-8">
+               <nav class="main-nav desktop">
+                   <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                   <a href="standard.html" class="link white">Planos</a>
+                   <a href="entrar.html" class="link white">Entrar</a>
+               </nav>
+               <nav class="main-nav mob">
+                <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
+                    <i class="icon icon-menu"></i>
+                </a>
+               </nav>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
     <!-- Main Hero Structure -->
 
@@ -69,9 +69,9 @@
     <section class="plan-navigation">
         <div class="container">
             <nav class="tab-nav">
-                <a href="#" class="tab-item selected">Standard</a>
-                <a href="#" class="tab-item">Advanced</a>
-                <a href="#" class="tab-item">Enterprise</a>
+                <a href="standard.html" class="tab-item selected">Standard</a>
+                <a href="advanced.html" class="tab-item">Advanced</a>
+                <a href="enterprise.html" class="tab-item">Enterprise</a>
             </nav>
         </div>
     </section>
@@ -113,8 +113,8 @@
                         <span class="caption xmd subtle-w">Qualidade superior e menor preço do mercado. <i class="icon icon-check positive"></i></span>
                         <span class="caption xmd subtle-w">Cancele quando quiser <i class="icon icon-check positive"></i></span>
                         <div class="action-holder">
-                            <a href="fale-conosco" class="btn md outline-btn">Falar com especialista</a>
-                            <a href="criar-conta" class="btn md primary-btn">Escolher Plano</a>
+                            <a href="fale-conosco.html" class="btn md outline-btn">Falar com especialista</a>
+                            <a href="criar-conta.html" class="btn md primary-btn">Escolher Plano</a>
                          </div>
                     </div>
                 </div>
@@ -208,8 +208,8 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="fale-conosco" class="btn md neutral-btn">Falar com especialista</a>
-                            <a href="criar-conta" class="btn md neutral-btn">Escolher Plano</a>
+                            <a href="fale-conosco.html" class="btn md neutral-btn">Falar com especialista</a>
+                            <a href="criar-conta.html" class="btn md neutral-btn">Escolher Plano</a>
                          </div>
                     </div>
                 </div>
@@ -282,8 +282,8 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="fale-conosco" class="btn md neutral-btn">Falar com especialista</a>
-                            <a href="criar-conta" class="btn md primary-btn">Escolher Plano</a>
+                            <a href="fale-conosco.html" class="btn md neutral-btn">Falar com especialista</a>
+                            <a href="criar-conta.html" class="btn md primary-btn">Escolher Plano</a>
                          </div>
                     </div>
                 </div>
@@ -356,8 +356,8 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="fale-conosco" class="btn md outline-btn">Falar com especialista</a>
-                            <a href="criar-conta" class="btn md secondary-btn">Escolher Plano</a>
+                            <a href="fale-conosco.html" class="btn md outline-btn">Falar com especialista</a>
+                            <a href="criar-conta.html" class="btn md secondary-btn">Escolher Plano</a>
                          </div>
                     </div>
                 </div>
@@ -373,14 +373,14 @@
            <h6 class="heading md white">Temos um time de especialistas pronto para te atender</h6>
            <p class="caption md subtle-w">Descubra tudo o que podemos fazer por você!</p>
            <div class="action-holder">
-              <a href="#" class="btn neutral-btn md">Falar com especialista</a>
+              <a href="fale-conosco.html" class="btn neutral-btn md">Falar com especialista</a>
           </div>
        </div>
      </section>
 
       <!-- Footer -->
 
-      <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -392,9 +392,9 @@
             <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
-                      <a href="standard" class="link subtle-l">Comece Agora</a>
-                      <a href="entrar" class="link subtle-l">Entrar</a>
-                      <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
+                      <a href="standard.html" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar.html" class="link subtle-l">Entrar</a>
+                      <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                       <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                   </nav>
@@ -406,7 +406,6 @@
                       <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
                       <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
                       <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                      <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
                   </nav>
               </div>
           </div>
@@ -425,7 +424,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col col-md-4">
-                          <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
                       </div>
                       <div class="col col-md-8">
                          <nav class="main-nav mob">
@@ -437,16 +436,15 @@
                       <div class="col">
                           <nav class="mob-nav">
                               <a href="/" class="link white">Home</a>
-                              <a href="como-monetizar" class="link white">Como monetizar</a>
-                              <a href="standard" class="link white">Planos</a>
-                              <a href="entrar" class="link white">Entrar</a>
-                              <a href="standard" class="link primary-link">Começar Agora</a>
+                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                              <a href="standard.html" class="link white">Planos</a>
+                              <a href="entrar.html" class="link white">Entrar</a>
+                              <a href="standard.html" class="link primary-link">Começar Agora</a>
                           </nav>
                           <nav class="mob-social-nav">
                               <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
                               <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
                               <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                              <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
                           </nav>
                       </div>
                   </div>
@@ -456,6 +454,7 @@
           </div>
           </div>
       </div>
+
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
