--- a/sucess-page.html
+++ b/sucess-page.html
@@ -37,10 +37,10 @@
             </div>
             <div class="col col-md-8">
                <nav class="main-nav desktop">
-                   <a href="como-monetizar" class="link white">Como monetizar</a>
-                   <a href="standard" class="link white">Planos</a>
-                   <a href="entrar" class="link white">Entrar</a>
-                   <a href="standard" class="header-cta btn lg dark-btn">Comece Agora</a>
+                   <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                   <a href="standard.html" class="link white">Planos</a>
+                   <a href="entrar.html" class="link white">Entrar</a>
+                   <a href="standard.html" class="header-cta btn lg dark-btn">Comece Agora</a>
                </nav>
                <nav class="main-nav mob">
                 <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
@@ -83,9 +83,9 @@
         </div>
     </section>
 
-      <!-- Footer -->
+     <!-- Footer -->
 
-      <footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -97,9 +97,9 @@
             <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
-                      <a href="standard" class="link subtle-l">Comece Agora</a>
-                      <a href="entrar" class="link subtle-l">Entrar</a>
-                      <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
+                      <a href="standard.html" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar.html" class="link subtle-l">Entrar</a>
+                      <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                       <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                   </nav>
@@ -111,7 +111,6 @@
                       <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
                       <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
                       <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                      <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
                   </nav>
               </div>
           </div>
@@ -130,7 +129,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col col-md-4">
-                          <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
                       </div>
                       <div class="col col-md-8">
                          <nav class="main-nav mob">
@@ -142,16 +141,15 @@
                       <div class="col">
                           <nav class="mob-nav">
                               <a href="/" class="link white">Home</a>
-                              <a href="como-monetizar" class="link white">Como monetizar</a>
-                              <a href="standard" class="link white">Planos</a>
-                              <a href="entrar" class="link white">Entrar</a>
-                              <a href="standard" class="link primary-link">Começar Agora</a>
+                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                              <a href="standard.html" class="link white">Planos</a>
+                              <a href="entrar.html" class="link white">Entrar</a>
+                              <a href="standard.html" class="link primary-link">Começar Agora</a>
                           </nav>
                           <nav class="mob-social-nav">
                               <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
                               <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
                               <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                              <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
                           </nav>
                       </div>
                   </div>
@@ -161,6 +159,7 @@
           </div>
           </div>
       </div>
+
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
