--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
 
     <!-- Header Comp -->
 
-    <header class="main-header">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col col-md-4">
-                    <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
-                </div>
-                <div class="col col-md-8">
-                   <nav class="main-nav desktop">
-                       <a href="como-monetizar" class="link white">Como monetizar</a>
-                       <a href="standard" class="link white">Planos</a>
-                       <a href="entrar" class="link white">Entrar</a>
-                       <a href="standard" class="header-cta btn lg dark-btn">Comece Agora</a>
-                   </nav>
-                   <nav class="main-nav mob">
-                    <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
-                        <i class="icon icon-menu"></i>
-                    </a>
-                   </nav>
-                </div>
+   <header class="main-header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col col-md-4">
+                <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
+            </div>
+            <div class="col col-md-8">
+               <nav class="main-nav desktop">
+                   <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                   <a href="standard.html" class="link white">Planos</a>
+                   <a href="entrar.html" class="link white">Entrar</a>
+                   <a href="standard.html" class="header-cta btn lg dark-btn">Comece Agora</a>
+               </nav>
+               <nav class="main-nav mob">
+                <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
+                    <i class="icon icon-menu"></i>
+                </a>
+               </nav>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
 
     <!-- Detail Asset -->
@@ -75,7 +75,7 @@
                 <h1 class="heading lg white">Comece o seu próprio banco digital!</h1>
                 <p class="caption lg subtle-w">Criar um banco digital é bem mais simples do que você imagina. <b>Seja uma fintech, sem mudar quem você é.</b></p>
                 <div class="action-holder">
-                    <a href="standard" class="btn primary-btn md">Comece Agora</a>
+                    <a href="standard.html" class="btn primary-btn md">Comece Agora</a>
                     <a href="#more-section" class="btn neutral-btn md">Saiba Mais</a>
                 </div>
             </div>
@@ -90,7 +90,7 @@
          <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
          <div class="action-holder">
             <a href="#second-anchor" class="btn primary-btn md">Quero saber mais</a>
-            <a href="standard" class="btn outline-btn md">Ver nossos planos</a>
+            <a href="standard.html" class="btn outline-btn md">Ver nossos planos</a>
         </div>
      </div>
     </section>
@@ -118,7 +118,7 @@
                       <div class="content-holder">
                           <h3 class="heading sm dark">Democratização do sistema financeiro</h3>
                           <p class="caption md subtle">Ganhe o controle das transações financeiras de toda a sua empresa. Com a QGX, você tem o controle sobre as suas taxas,  históricos de movimentações e muito mais.</p>
-                          <a href="standard" class="link neutral-link">Comece Agora</a>
+                          <a href="standard.html" class="link neutral-link">Comece Agora</a>
                       </div>
                   </div>
               </div>
@@ -133,7 +133,7 @@
                     <div class="content-holder">
                         <h3 class="heading sm dark">Comece agora e cancele quando quiser</h3>
                         <p class="caption md subtle">Assim como nosso setup é extremamente rápido e fácil, você não fica preso a nenhum contrato extenso e cheio de armadilhas. Comece agora e cancele quando quiser! <b>Estamos aqui para melhorar o seu negócio e crescer junto com você!</b></p>
-                        <a href="advanced" class="link neutral-link">Comece Agora</a>
+                        <a href="advanced.html" class="link neutral-link">Comece Agora</a>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     <div class="content-holder">
                         <h3 class="heading sm dark">Monetize as transações da sua empresa</h3>
                         <p class="caption md subtle">Aqui, você cobra as taxas, ganha comissões pelas interações de funcionários e clientes, seja por uma recarga de celular, uma solicitação de empréstimo aprovada e muito mais.</p>
-                        <a href="como-monetizar" class="link primary-link">Saiba Mais</a>
+                        <a href="como-monetizar.html" class="link primary-link">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -550,89 +550,88 @@
            <h6 class="heading md white">Nossa plataforma permite que você opere como um banco digital</h6>
            <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
            <div class="action-holder">
-              <a href="standard" class="btn primary-btn md">Comece Agora</a>
+              <a href="standard.html" class="btn primary-btn md">Comece Agora</a>
           </div>
        </div>
       </section>
 
       <!-- Footer -->
 
-      <footer>
-          <div class="container">
-              <div class="row">
-                  <div class="col-sm-12">
-                      <div class="ft-logo-holder">
-                          <img src="img/subtle-logo.svg">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                  <nav class="footer-nav">
+                      <a href="standard.html" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar.html" class="link subtle-l">Entrar</a>
+                      <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
+                      <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
+                      <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
+                  </nav>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-12">
+                  <nav class="social-nav">
+                      <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
+                      <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
+                      <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
+                  </nav>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-12">
+                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+              </div>
+          </div>
+        </div>
+    </footer>
+
+    <!-- Modal -->
+      <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+          <div class="modal-content menu">
+              <div class="container">
+                  <div class="row">
+                      <div class="col col-md-4">
+                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                      </div>
+                      <div class="col col-md-8">
+                         <nav class="main-nav mob">
+                          <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
+                         </nav>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col">
+                          <nav class="mob-nav">
+                              <a href="/" class="link white">Home</a>
+                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
+                              <a href="standard.html" class="link white">Planos</a>
+                              <a href="entrar.html" class="link white">Entrar</a>
+                              <a href="standard.html" class="link primary-link">Começar Agora</a>
+                          </nav>
+                          <nav class="mob-social-nav">
+                              <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
+                              <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
+                              <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
+                          </nav>
                       </div>
                   </div>
               </div>
-              <div class="row">
-                <div class="col-sm-12">
-                    <nav class="footer-nav">
-                        <a href="standard" class="link subtle-l">Comece Agora</a>
-                        <a href="entrar" class="link subtle-l">Entrar</a>
-                        <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
-                        <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
-                        <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
-                    </nav>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <nav class="social-nav">
-                        <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
-                        <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                        <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
-                    </nav>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
-                </div>
-            </div>
+
           </div>
-      </footer>
+          </div>
+          </div>
+      </div>
 
-      <!-- Modal -->
-        <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-            <div class="modal-content menu">
-                <div class="container">
-                    <div class="row">
-                        <div class="col col-md-4">
-                            <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
-                        </div>
-                        <div class="col col-md-8">
-                           <nav class="main-nav mob">
-                            <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
-                           </nav>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <nav class="mob-nav">
-                                <a href="/" class="link white">Home</a>
-                                <a href="como-monetizar" class="link white">Como monetizar</a>
-                                <a href="standard" class="link white">Planos</a>
-                                <a href="entrar" class="link white">Entrar</a>
-                                <a href="standard" class="link primary-link">Começar Agora</a>
-                            </nav>
-                            <nav class="mob-social-nav">
-                                <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
-                                <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
-                                <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                                <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            </div>
-            </div>
-        </div>
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
